--- a/Location.html
+++ b/Location.html
@@ -1,1 +1,9 @@
-
+!<!DOCTYPE html>
+<html>
+<head>
+  <title> Location </title>
+</head>
+<body>
+  <p> This is for Locations </p>
+</body>
+</html>
