Added stuff to the Ways We Give Back tab

--- a/Ways_We_Give_Back.html
+++ b/Ways_We_Give_Back.html
@@ -1,1 +1,9 @@
-
+!<!DOCTYPE html>
+<html>
+<head>
+  <title> Ways We Give Back </title>
+</head>
+<body>
+  <p> This tab is for Ways We Give Back </p>
+</body>
+</html>
