--- a/home.html
+++ b/home.html
@@ -15,11 +15,11 @@
         </h2>
         <p> 
           <ul>
-            <li> <a href="https://kemib123.github.io/Fir3fly/About_Us.html"> About Us </a> </li>
-            <li> <a href="https://kemib123.github.io/Fir3fly/Location.html"> Location </a> </li>
-            <li> <a href="https://kemib123.github.io/Fir3fly/Ways_We_Give_Back.html"> Ways We Give Back </a> </li>
-            <li> <a href="https://kemib123.github.io/Fir3fly/Donation.html"> Donation </a> </li>
-            <li> <a href="https://kemib123.github.io/Fir3fly/Events.html"> Events </a> </li>
+            <li> <a href="About_Us.html"> About Us </a> </li>
+            <li> <a href="Location.html"> Location </a> </li>
+            <li> <a href="Ways_We_Give_Back.html"> Ways We Give Back </a> </li>
+            <li> <a href="Donation.html"> Donation </a> </li>
+            <li> <a href="Events.html"> Events </a> </li>
           </ul>
         </p>
                                                                                               
