--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
   <html>
     <head> 
       <title> Fir3fly </title>
-      <link rel="stylesheet" type="text/css" href="Home.css">
+      <link rel="stylesheet" type="text/css" href="Fir3fly/Home.css">
     </head>
       
     <body>  
