--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
    <a href="About_Us.html"> About Us </a> &nbsp  <a href="Location.html"> Location </a> &nbsp <a href="Ways_We_Give_Back.html"> Ways We Give Back </a> &nbsp  <a href="Donation.html"> Donation </a> &nbsp  <a href="Events.html"> Events </a> 
             
             </h3>  
-               <h4> Our Mission </h4>
+               <h6 style = "font-size:100px"> Our Mission </h6>
             
           </ul>
       </p>
