--- a/home.html
+++ b/home.html
@@ -135,7 +135,7 @@ function showSlides() {
 </body>
 </html>
             </h3>  
-               <h6 style = "text-align:center"> Our mission is to provide children a pathway to success through education. By providing them with the supplies they need, we are setting a bright future for them and we will strive to give them excellent quality of life. </h6>
+               <h6 style = "font-size:3px;text-align:center"> Our mission is to provide children a pathway to success through education. By providing them with the supplies they need, we are setting a bright future for them and we will strive to give them excellent quality of life. </h6>
             
           </ul>
       </p>
