--- a/About_Us.html
+++ b/About_Us.html
@@ -14,7 +14,7 @@ div {
     border: 25px white;
     padding: 25px;
     margin: 25px;
-    float: left;
+    float: right;
 }
   
 br {
@@ -29,6 +29,18 @@ br {
 <br>  
   <h1> Kemi </h1>  
 Hey my name is Kemi Bakare. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love softball, running, hanging out with friends and traveling . I’m very excited about this website because I’m helping change the world. 
+
+<br>  
+  <h2> Nneoma </h2>
+Hey my name is Nneoma Emeka. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love reading, being creative and thinking. I’m very excited about this website because I am making a difference in other people’s life.
+
+<br>  
+  <h3> Tobenna </h3>
+Hey my name is Tobenna Obi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love sleeping, baking and eating. I’m very excited about this website because it brings me joy to help people 
+
+<br>  
+  <h4> Sana </h4>
+Hey my name is Sana Siddiqi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love writing and traveling. I’m very excited about this website because it brings out my inner creativity and it's something I can look back and be proud of.
 
 </div>
 </body>
