--- a/Location.html
+++ b/Location.html
@@ -4,6 +4,6 @@
   <title> Location </title>
 </head>
 <body>
-  <p> This is for Locations </p>
+<iframe src="https://www.google.com/maps/d/embed?mid=1NjjcUwoQ_I_ICsFLcICjI-7FV08" width="640" height="480"></iframe>
 </body>
 </html>
