--- a/About_Us.html
+++ b/About_Us.html
@@ -41,9 +41,9 @@ Hey my name is Nneoma Emeka. I am 16 years old and I am also currently engaged i
 Hey my name is Tobenna Obi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love sleeping, baking and eating. I’m very excited about this website because it brings me joy to help people 
 
 <br>  
-  <title> Sana </title>
+  <h5> Sana 
 Hey my name is Sana Siddiqi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love writing and traveling. I’m very excited about this website because it brings out my inner creativity and it's something I can look back and be proud of.
-
+  </h5>
 </div>
 </body>
 </html>
