--- a/Location.html
+++ b/Location.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <div id="googleMap" style="width:100%;height:400px;float:center"></div>
+  <div id="googleMap" style="width:100%;height:400px; align:center"></div>
 
 <iframe src="https://www.google.com/maps/d/embed?mid=1NjjcUwoQ_I_ICsFLcICjI-7FV08" width="640" height="480"></iframe>
 
