--- a/About_Us.html
+++ b/About_Us.html
@@ -25,24 +25,25 @@ br {
 </head>
 
 <div>
-  <h1> Favour </h1>
-Hey my name is Favour Agabi. I am 15 years old and I am currently engaged in the Girl Code Program, located at First Data. I love running, helping others, going above and beyond and hanging out with friends. I’m very excited about this website due to the fact that it is all about helping others in need and just putting a smile on peoples faces, which is something you would do as a christian.
+<p1> 
+  <str>Favour </str> 
+Hey my name is Favour Agabi. I am 15 years old and I am currently engaged in the Girl Code Program, located at First Data. I love running, helping others, going above and beyond and hanging out with friends. I’m very excited about this website due to the fact that it is all about helping others in need and just putting a smile on peoples faces, which is something you would do as a christian.</p1>
 
-<br>  
-  <h2> Kemi </h2>  
-Hey my name is Kemi Bakare. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love softball, running, hanging out with friends and traveling . I’m very excited about this website because I’m helping change the world. 
+<p2>  
+  <str> Kemi </str>  
+Hey my name is Kemi Bakare. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love softball, running, hanging out with friends and traveling . I’m very excited about this website because I’m helping change the world.</p2>
 
-<br>  
-  <h3> Nneoma </h3>
-Hey my name is Nneoma Emeka. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love reading, being creative and thinking. I’m very excited about this website because I am making a difference in other people’s life.
+<p3>  
+  <str> Nneoma </str>
+Hey my name is Nneoma Emeka. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love reading, being creative and thinking. I’m very excited about this website because I am making a difference in other people’s life.</p3>
 
-<br>  
-  <h4> Tobenna </h4>
-Hey my name is Tobenna Obi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love sleeping, baking and eating. I’m very excited about this website because it brings me joy to help people 
+<p4>  
+  <str> Tobenna </str>
+Hey my name is Tobenna Obi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love sleeping, baking and eating. I’m very excited about this website because it brings me joy to help people.</p4>
 
-<br>  
-  <h5> Sana </h5>
-Hey my name is Sana Siddiqi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love writing and traveling. I’m very excited about this website because it brings out my inner creativity and it's something I can look back and be proud of.
+<p5>  
+  <str> Sana </str>
+Hey my name is Sana Siddiqi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love writing and traveling. I’m very excited about this website because it brings out my inner creativity and it's something I can look back and be proud of.</p5>
   
 </div>
 </body>
