--- a/Location.html
+++ b/Location.html
@@ -7,7 +7,7 @@
 
   <div id="googleMap" style="width:100%;height:400px"></div>
 
-<iframe src="https://www.google.com/maps/d/embed?mid=1NjjcUwoQ_I_ICsFLcICjI-7FV08" width="640" height="480"></iframe>
+<iframe src="https://www.google.com/maps/d/embed?mid=1NjjcUwoQ_I_ICsFLcICjI-7FV08" width="1050px" height="480px"></iframe>
 
 </body>
 </html>
