--- a/About_Us.html
+++ b/About_Us.html
@@ -31,7 +31,7 @@ div {
   <br>
 <p2>Hey my name is Favour Agabi. I am 15 years old and I am currently engaged in the Girl Code Program, located at First Data. I love running, helping others, going above and beyond and hanging out with friends. I’m very excited about this website due to the fact that it is all about helping others in need and just putting a smile on peoples faces, which is something you would do as a christian.</p2>
 <hr>
-  <span class ="custome-br"></span>
+  <span class ="custom-br"></span>
   <p3> <em> <b> Kemi </b> </em> </p3>
 <p4>Hey my name is Kemi Bakare. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love softball, running, hanging out with friends and traveling . I’m very excited about this website because I’m helping change the world.</p4>
 <hr>
