--- a/Location.html
+++ b/Location.html
@@ -4,8 +4,7 @@
   <title> Locations </title>
 </head>
 <body>
-
-<iframe src="https://www.google.com/maps/d/embed?mid=1NjjcUwoQ_I_ICsFLcICjI-7FV08" width="1050px" height="800px"></iframe>
-
+  <p> <br> </p> </br>
+<iframe src="https://www.google.com/maps/d/embed?mid=1aUHA4u8UwR84uWIwMdz70eY-3mU" width="1050" height="800"></iframe>
 </body>
 </html>
