--- a/About_Us.html
+++ b/About_Us.html
@@ -29,7 +29,7 @@ div {
 
 <div>
   <p1> <em> <b> Favour </b> </em> </p1>
-  <br>
+  <br style= "color: white">
 <p2>Hey my name is Favour Agabi. I am 15 years old and I am currently engaged in the Girl Code Program, located at First Data. I love running, helping others, going above and beyond and hanging out with friends. I’m very excited about this website due to the fact that it is all about helping others in need and just putting a smile on peoples faces, which is something you would do as a christian.</p2>
 <hr>
   <span class ="custom-br"></span>
