--- a/About_Us.html
+++ b/About_Us.html
@@ -13,7 +13,7 @@ div {
     width: 600px;
     border: 25px white;
     padding: 50px;
-    margin: 50px;
+    margin-bottom: 50px;
     float: right;
 }
   
