--- a/About_Us.html
+++ b/About_Us.html
@@ -17,6 +17,13 @@ div {
     float: right;
 }
   
+.break {
+   background-color: white;
+   line-height: 5px;
+   display: block;
+   width: 100%;
+  }
+  
 </style>
 </head>
 
