--- a/About_Us.html
+++ b/About_Us.html
@@ -11,9 +11,9 @@
 div {
     background-color: lightgrey;
     width: 600px;
-    border: 25px white;
+    border: 10px white;
     padding: 50px;
-    margin-bottom: 50px;
+    margin: 50px;
     float: right;
 }
   
