--- a/About_Us.html
+++ b/About_Us.html
@@ -30,15 +30,15 @@ div {
   <p3> <em> <b> Kemi </b> </em> </p3>
   <br>
 <p4>Hey my name is Kemi Bakare. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love softball, running, hanging out with friends and traveling . I’m very excited about this website because I’m helping change the world.</p4>
-<hr>
+  <div style = "height: 0.5px; background-color: #FFFFFF; width: 600px"></div>
   <p5> <em> <b> Nneoma </b> </em></p5>
   <br>
 <p6>Hey my name is Nneoma Emeka. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love reading, being creative and thinking. I’m very excited about this website because I am making a difference in other people’s life.</p6>
-<hr>
+  <div style = "height: 0.5px; background-color: #FFFFFF; width: 600px"></div>
   <p7> <em> <b> Tobenna </b> </em></p7>
   <br>
 <p8>Hey my name is Tobenna Obi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love sleeping, baking and eating. I’m very excited about this website because it brings me joy to help people.</p8>
-<hr>
+  <div style = "height: 0.5px; background-color: #FFFFFF; width: 600px"></div>
   <p9> <em> <b> Sana </b> </em></p9>
   <br>
 <p10>Hey my name is Sana Siddiqi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love writing and traveling. I’m very excited about this website because it brings out my inner creativity and it's something I can look back and be proud of.</p10>
