--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
         <span class="dot"></span>
       </div>
 
-      <script src= slideshow.js> </script>
+      <script src= Fir3fly/slideshow.js> </script>
 
       <p1> <em> <b> Our mission is to provide children a pathway to success through education. By providing them with the supplies they need, we are setting a bright future for them and we will strive to give them excellent quality of life.</em></b>
       </p1>
