--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
           <a href="About_Us.html"> About Us </a>
           <a href="Location.html"> Location </a>
           <a href="Ways_We_Give_Back.html"> Ways We Give Back </a>
-          <a href="Donation.html"> Donation </a>
+          <a href="donation.html"> Donation </a>
           <a href="Events.html"> Events </a>
         </ul.a>
       </h2>
