--- a/Events.html
+++ b/Events.html
@@ -56,9 +56,9 @@
           title: 'Graduation day',
           start: '2017-07-20'
         }, {
-          title: 'Long Event',
-          start: '2016-05-07',
-          end: '2016-05-10'
+          title: 'Back to school extravaganza',
+          start: '2017-07-30',
+          
         }, {
           id: 999,
           title: 'Repeating Event',
