--- a/Events.html
+++ b/Events.html
@@ -58,7 +58,9 @@
         }, {
           title: 'Back to school extravaganza',
           start: '2017-07-30',
-          
+        }, { 
+          title: 'The Birth Of Fir3fly.',
+          start: '2017-07-07',
         }, {
           id: 999,
           title: 'Repeating Event',
