--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-      <h1 style: "color: olive">  Fir3Fly </h1>
+      <h1 style: "color: olive"><a href="home.html"> Fir3Fly </a> </h1>
       <h2>
         <ul.a>
           <a href="About_Us.html"> About Us </a>
