--- a/Events.html
+++ b/Events.html
@@ -114,7 +114,7 @@
 </head>
 
 <body>
-  <h1 style= "color: olive">Fir3fly</h1>
+  <h1 style= "color: olive><a href="home.html"> Fir3Fly </a></h1>
   <div id="calendar"></div>
 </body>
 
