--- a/donation.html
+++ b/donation.html
@@ -4,19 +4,8 @@
 <title> Donations </title>
 </head>
 <body>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.gofundme.com/fir3fly"">
-<style>
-.w3-button {width:150px;}
-</style>
 
-
-<div class="w3-container">
-
-  <p><button class="w3-button w3-red">Donate Now</button></p>
-         
-</div>
-
+<p><a href="https://www.gofundme.com/fir3fly">Donate Here</a></p>
 
 
 </body>
