--- a/Events.html
+++ b/Events.html
@@ -114,7 +114,7 @@
 </head>
 
 <body>
-   <h1 style="color: olive"><a href="home.html"> Fir3Fly </a> </h1>
+  <button class "#" onClick = "window.location.href='home.html';" Fir3Fly </button>
   <div id="calendar"></div>
 </body>
 
