--- a/Events.html
+++ b/Events.html
@@ -3,6 +3,12 @@
 
 <head>
 <style>
+logo-font {
+  font-weight: normal;
+  font-style: normal;
+  font: 'Comic Sans';
+  }
+  
 .fc-event-hover {
   position: relative !important;
   height: 17px;
@@ -114,7 +120,7 @@
 </head>
 
 <body>
-  <button class "#" onClick = "window.location.href='home.html';" Fir3Fly </button>
+  <button class "logo-font" onClick = "window.location.href='home.html';" Fir3Fly </button>
   <div id="calendar"></div>
 </body>
 
