--- a/Events.html
+++ b/Events.html
@@ -6,7 +6,7 @@
 logo-font {
   font-weight: normal;
   font-style: normal;
-  font: 'Comic Sans';
+  font=family: 'Comic Sans MS';
   }
   
 .fc-event-hover {
