--- a/Events.html
+++ b/Events.html
@@ -3,10 +3,18 @@
 
 <head>
 <style>
-logo-font {
+  
+.logo-font {
   font-weight: normal;
   font-style: normal;
   font=family: 'Comic Sans MS';
+  }
+  
+.button {
+  border: none;
+  color: black;
+  font-size: 40px;
+  
   }
   
 .fc-event-hover {
