--- a/Events.html
+++ b/Events.html
@@ -128,7 +128,7 @@
 </head>
 
 <body>
-  <button class "logo-font" onClick = "window.location.href='home.html';" Fir3Fly </button>
+  <button class "logo-font" onClick = "window.location.href='home.html';"> Fir3Fly </button>
   <div id="calendar"></div>
 </body>
 
