--- a/Events.html
+++ b/Events.html
@@ -8,13 +8,19 @@
   font-weight: normal;
   font-style: normal;
   font=family: 'Comic Sans MS';
+  border: none;
+  font-size: 40px;
+  outline: none;
+  color: olive;
+  cursor: pointer;
   }
   
 .button {
   border: none;
-  color: black;
+  color: olive;
+  cursor: pointer;
+  width: 30px;
   font-size: 40px;
-  
   }
   
 .fc-event-hover {
