--- a/Events.html
+++ b/Events.html
@@ -11,14 +11,14 @@
   border: none;
   font-size: 40px;
   outline: none;
-  color: olive;
+  color: #000000;
   cursor: pointer;
   }
   
 .button {
   border: none;
   cursor: pointer;
-  width: 30px;
+  width: 100px;
   font-size: 40px;
   }
   
