--- a/Events.html
+++ b/Events.html
@@ -15,7 +15,7 @@
   border: none;
   width: 100px;
   font-size: 30px;
-  color: black;
+  color: olive;
   font-family: 'Comic Sans';
   cursor: pointer;
   }
