--- a/home.html
+++ b/home.html
@@ -2,6 +2,23 @@
   <html>
 
     <head>
+    <style>
+      
+ .logo-font {
+  font-weight: normal;
+  font-style: normal;
+  font=family: 'Comic Sans';
+  }
+     
+ button {
+  background-color: transparent;
+  border: none;
+  width: 100px;
+  font-size: 30px;
+  color: olive;
+  font-family: 'Comic Sans';
+  cursor: pointer;
+  }
       <title> Fir3fly </title>
       <link rel="stylesheet" type="text/css" href="Home.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +26,7 @@
     </head>
 
     <body>
-      <h1 style: "color: olive"><a href="home.html"> Fir3Fly </a> </h1>
+      <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
       <h2>
         <ul.a>
           <a href="About_Us.html"> About Us </a>
