--- a/donation.html
+++ b/donation.html
@@ -5,7 +5,33 @@
 </head>
 <body>
 
-<p><a href="https://www.gofundme.com/fir3fly">Donate Here</a></p>
+<style>
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+
+.button3 {background-color: #f44336;} /* Red */ 
+
+</style>
+</head>
+<body>
+
+
+<p><button><a href="https://www.gofundme.com/fir3fly"</a></button></p>
+
+<button class="button button3">Red</button>
+
+
 
 
 </body>
