--- a/home.html
+++ b/home.html
@@ -15,6 +15,8 @@
   font-family: 'Comic Sans';
   cursor: pointer;
   }
+      </style>
+      
       <title> Fir3fly </title>
       <link rel="stylesheet" type="text/css" href="Home.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
