--- a/donation.html
+++ b/donation.html
@@ -29,7 +29,7 @@
 
 <p><button><a href="https://www.gofundme.com/fir3fly"</a></button></p>
 
-<button class="button button3">Red</button>
+<button class="button button3">Donate Now</button>
 
 
 
