--- a/Location.html
+++ b/Location.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
   <title> Locations </title>
+  <style>
+    button {
+  background-color: transparent;
+  border: none;
+  width: 100px;
+  font-size: 30px;
+  color: olive;
+  font-family: 'Comic Sans';
+  cursor: pointer;
+  }
+  </style>
 </head>
 <body>
+  <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
   <p> <br> </p> </br>
 <iframe src="https://www.google.com/maps/d/embed?mid=1aUHA4u8UwR84uWIwMdz70eY-3mU" width="1050" height="800"></iframe>
 </body>
