--- a/donation.html
+++ b/donation.html
@@ -26,6 +26,47 @@
 </head>
 <body>
 
+<div id="pics">
+      <ul>
+        <li>
+          <div id="cashcon">
+            <img id ="money" src="money.png" alt="dollars">
+          </div>
+        </li>
+        <li>
+          <div id="bookcon">
+            <img id ="book" src="book.png" alt="books">
+          </div>
+        </li>
+        <li>
+          <div id="backpackcon">
+            <img id ="backpack" src="backpack.jpg" alt="A backpack">
+          </div>
+        </li>
+        <li>
+          <div id="pencilcon">
+            <img id ="pencil" onclick="pencilpic()" src="pencil.jpg" alt="A pencil">
+            <script src="openpics.js"></script>
+          </div>
+        </li>
+    </div>
+
+    <div id="menu">
+      <ol>
+        <li> Money </li>
+        <li> Books </li>
+        <li> Bags </li>
+        <li> Writing Tools <li>
+      </ol>
+    </div>
+
+    <div id="hiddenlist">
+      <ul>
+        <li id="pcil"></li>
+        <li id="bk"></li>
+        <li id="cash"></li>
+        <li id="backpk"></li>
+
 
 <p><button><a href="https://www.gofundme.com/fir3fly"</a></button></p>
 
