--- a/Events.html
+++ b/Events.html
@@ -131,6 +131,7 @@
 
 <body>
   <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
+  <div id="calendar"></div>
 
 </body>
 
