--- a/Events.html
+++ b/Events.html
@@ -33,7 +33,7 @@
   z-index: 99999;
   width: auto;
   overflow: visible !important;
-  background-color: green;
+  background-color: olive;
   padding: 1px;
   border-radius: 2px;
 }
