--- a/Events.html
+++ b/Events.html
@@ -130,7 +130,7 @@
 </head>
 
 <body>
-  <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly3 </button>
+  <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
   <div id="calendar"></div>
 
 </body>
