--- a/Location.html
+++ b/Location.html
@@ -18,6 +18,15 @@
 <body>
   <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
   <p> <br> </p> </br>
+  <h2>
+        <ul.a>
+          <a href="About_Us.html"> About Us </a>
+          <a href="Location.html"> Location </a>
+          <a href="Ways_We_Give_Back.html"> Ways We Give Back </a>
+          <a href="donation.html"> Donation </a>
+          <a href="Events.html"> Events </a>
+        </ul.a>
+      </h2>
 <iframe src="https://www.google.com/maps/d/embed?mid=1aUHA4u8UwR84uWIwMdz70eY-3mU" width="1050" height="800"></iframe>
 </body>
 </html>
