--- a/Location.html
+++ b/Location.html
@@ -19,6 +19,8 @@
   <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
   <p> <br> </p> </br>
   <h2>
+    h2 {
+    text-align: center;
         <ul.a>
           <a href="About_Us.html"> About Us </a>
           <a href="Location.html"> Location </a>
