--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 
     </head>
 
-    <body>
+    <body  style = "background-color: #A8B5BF">
       <h1> Fir3fly </h1>
       <h2>
         <ul.a>
