--- a/Location.html
+++ b/Location.html
@@ -19,8 +19,11 @@
   <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
   <p> <br> </p> </br>
   <h2>
-    h2 {
-    text-align: center;
+     <div style="text-align:center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      
         <ul.a>
           <a href="About_Us.html"> About Us </a>
           <a href="Location.html"> Location </a>
@@ -29,6 +32,7 @@
           <a href="Events.html"> Events </a>
         </ul.a>
       </h2>
+    </div>
 <iframe src="https://www.google.com/maps/d/embed?mid=1aUHA4u8UwR84uWIwMdz70eY-3mU" width="1050" height="800"></iframe>
 </body>
 </html>
