--- a/home.html
+++ b/home.html
@@ -8,11 +8,21 @@
       <title> Fir3fly </title>
       <link rel="stylesheet" type="text/css" href="Home.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-
+      <style>
+      button {
+  background-color: transparent;
+  border: none;
+  width: 100px;
+  font-size: 30px;
+  color: olive;
+  font-family: 'Comic Sans';
+  cursor: pointer;
+  }
+      </style>
     </head>
 
     <body  style = "background-color: #D4CBE5">
-      <h1> Fir3fly </h1>
+ <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
       <h2>
         <ul.a>
           <a href="About_Us.html"> About Us </a>
