--- a/home.html
+++ b/home.html
@@ -13,7 +13,8 @@
   background-color: transparent;
   border: none;
   width: 100px;
-  font-size: 30px;
+  font-size: 100px;
+  text-align: center
   color: olive;
   font-family: 'Comic Sans';
   cursor: pointer;
