--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   border: none;
   width: 100px;
   font-size: 100px;
-  text-align: center
+  text-align: center;
   color: olive;
   font-family: 'Comic Sans';
   cursor: pointer;
