--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
   border: none;
   width: 100px;
   font-size: 100px;
-  text-align: center;
-  color: olive;
+  text-align:center;
+  color: black;
   font-family: 'Comic Sans';
   cursor: pointer;
   }
