--- a/Location.html
+++ b/Location.html
@@ -18,20 +18,30 @@
 <body>
   <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
   <p> <br> </p> </br>
-  <h2>
-     <div style="text-align:center">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-      
-        <ul.a>
-          <a href="About_Us.html"> About Us </a>
-          <a href="Location.html"> Location </a>
-          <a href="Ways_We_Give_Back.html"> Ways We Give Back </a>
-          <a href="donation.html"> Donation </a>
-          <a href="Events.html"> Events </a>
-        </ul.a>
-      </h2>
+ <!DOCTYPE html>
+<html>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
+<div class="w3-container">
+
+
+<div class="w3-bar w3-border w3-light-grey">
+  <a href="#" class="w3-bar-item w3-button w3-green">Home</a>
+  <a href="#" class="w3-bar-item w3-button">About Us</a>
+  <a href="#" class="w3-bar-item w3-button">Locations</a>
+  <a href="#" class="w3-bar-item w3-button">Ways to give back</a>
+  <a href="#" class="w3-bar-item w3-button">Donations</a>
+  <a href="#" class="w3-bar-item w3-button">Events</a>
+ 
+        
+</div>
+<br>
+
+
+</body>
+</html>
     </div>
 <iframe src="https://www.google.com/maps/d/embed?mid=1aUHA4u8UwR84uWIwMdz70eY-3mU" width="1050" height="800"></iframe>
 </body>
