--- a/home.html
+++ b/home.html
@@ -9,12 +9,14 @@
       <link rel="stylesheet" type="text/css" href="Home.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <style>
+        
+        
       button {
   background-color: transparent;
   border: none;
   width: 100px;
   font-size: 100px;
-  text-align:center;
+  left: 250px;
   color: black;
   font-family: 'Comic Sans';
   cursor: pointer;
