--- a/Events.html
+++ b/Events.html
@@ -15,7 +15,7 @@
   background-color: transparent;
   border: none;
   width: 100px;
-  font-size: 30px;
+  font-size: 100px;
   color: olive;
   font-family: 'Comic Sans';
   cursor: pointer;
@@ -132,6 +132,7 @@
 <body>
   <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
   <div id="calendar"></div>
+ <h2> The calender shows upcoming events in the Fir3fly organisation. </h2>
 
 </body>
 
