--- a/Events.html
+++ b/Events.html
@@ -16,7 +16,7 @@
   border: none;
   width: 100px;
   font-size: 100px;
-  color: olive;
+  color: black;
   font-family: 'Comic Sans';
   cursor: pointer;
   }
