--- a/Location.html
+++ b/Location.html
@@ -29,6 +29,8 @@
 
 <div class="w3-bar w3-border w3-light-grey">
   <a href="#" class="w3-bar-item w3-button w3-green">Home</a>
+  <button class = "button" onClick = "window.location.href='home.html';"> Home </button>
+  <li><a href="home.html">About</a></li>
   <a href="#" class="w3-bar-item w3-button">About Us</a>
   <a href="#" class="w3-bar-item w3-button">Locations</a>
   <a href="#" class="w3-bar-item w3-button">Ways to give back</a>
