--- a/Location.html
+++ b/Location.html
@@ -28,14 +28,12 @@
 
 
 <div class="w3-bar w3-border w3-light-grey">
-  <a href="#" class="w3-bar-item w3-button w3-green">Home</a>
-  <button class = "button" onClick = "window.location.href='home.html';"> Home </button>
-  <li><a href="home.html">About</a></li>
-  <a href="#" class="w3-bar-item w3-button">About Us</a>
-  <a href="#" class="w3-bar-item w3-button">Locations</a>
-  <a href="#" class="w3-bar-item w3-button">Ways to give back</a>
-  <a href="#" class="w3-bar-item w3-button">Donations</a>
-  <a href="#" class="w3-bar-item w3-button">Events</a>
+  <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
+  <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
+  <a href="Location.html" class="w3-bar-item w3-button">Locations</a>
+  <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
+  <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
+  <a href="Events.html" class="w3-bar-item w3-button">Events</a>
  
         
 </div>
