--- a/home.html
+++ b/home.html
@@ -27,13 +27,14 @@
     <body  style = "background-color: #D4CBE5">
  <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
       <h2>
-        <ul.a>
-          <a href="About_Us.html"> About Us </a>
-          <a href="Location.html"> Location </a>
-          <a href="Ways_We_Give_Back.html"> Ways We Give Back </a>
-          <a href="donation.html"> Donation </a>
-          <a href="Events.html"> Events </a>
-        </ul.a>
+        <div class="w3-bar w3-border w3-light-grey">
+  <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
+  <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
+  <a href="Location.html" class="w3-bar-item w3-button">Locations</a>
+  <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
+  <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
+  <a href="Events.html" class="w3-bar-item w3-button">Events</a>
+ 
       </h2>
 
       <div class="slideshow-container">
