--- a/Events.html
+++ b/Events.html
@@ -131,7 +131,7 @@
 
 <body>
   <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
- <h2> The calender shows upcoming events in the Fir3fly organisation. </h2>
+ <h2 style= "text-align: center"> The calender shows upcoming events in the Fir3fly organisation. </h2>
   <div id="calendar"></div>
 
 </body>
