--- a/home.html
+++ b/home.html
@@ -34,6 +34,7 @@
   <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
   <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
   <a href="Events.html" class="w3-bar-item w3-button">Events</a>
+        </div>
  
       </h2>
 
