--- a/Events.html
+++ b/Events.html
@@ -128,11 +128,31 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.7.3/fullcalendar.min.css" />
   <link rel="stylesheet" href="style.css" />
 </head>
+ 
 
 <body>
   <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
  <h2 style= "text-align: center"> The calender shows upcoming events in the Fir3fly organisation. </h2>
   <div id="calendar"></div>
+ <h3>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
+<div class="w3-container">
+
+
+<div class="w3-bar w3-border w3-light-grey">
+  <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
+  <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
+  <a href="Location.html" class="w3-bar-item w3-button">Locations</a>
+  <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
+  <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
+  <a href="Events.html" class="w3-bar-item w3-button">Events</a>
+ 
+ </h3>
+ 
+        
+</div>
 
 </body>
 
