--- a/Ways_We_Give_Back.html
+++ b/Ways_We_Give_Back.html
@@ -4,6 +4,22 @@
   <title> Ways We Give Back </title>
 </head>
 <body>
+  <h2>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
+<div class="w3-container">
+
+
+<div class="w3-bar w3-border w3-light-grey">
+  <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
+  <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
+  <a href="Location.html" class="w3-bar-item w3-button">Locations</a>
+  <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
+  <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
+  <a href="Events.html" class="w3-bar-item w3-button">Events</a>
+ 
+ </h2>
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdwtT5ZATYy_KlgTRgvPJvLBdWkxNcuxM1X8_ibbvbifQHmWA/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </body>
 </html>
