--- a/About_Us.html
+++ b/About_Us.html
@@ -5,7 +5,22 @@
 
 <body>
   <h1 style = "text-align:center;font-size:100px">About Us </h1>
-  <!DOCTYPE html>
+  <h2>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
+<div class="w3-container">
+
+
+<div class="w3-bar w3-border w3-light-grey">
+  <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
+  <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
+  <a href="Location.html" class="w3-bar-item w3-button">Locations</a>
+  <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
+  <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
+  <a href="Events.html" class="w3-bar-item w3-button">Events</a>
+ 
+ </h2>
 
 <style>
 div {
