--- a/donation.html
+++ b/donation.html
@@ -18,7 +18,7 @@
     margin: 4px 2px;
     cursor: pointer;
 }
-     button4 {
+     .button4 {
   background-color: transparent;
   border: none;
   width: 100px;
