--- a/donation.html
+++ b/donation.html
@@ -17,8 +17,7 @@
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-}
-     .button4 {
+} .button4 {
   background-color: transparent;
   border: none;
   width: 100px;
