--- a/home.html
+++ b/home.html
@@ -9,7 +9,10 @@
       <link rel="stylesheet" type="text/css" href="Home.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <style>
-        
+       a:link {
+    color: purple;
+    font-family: 'century gothic';
+    font-size: 25px; 
    
       </style>
     </head>
