--- a/About_Us.html
+++ b/About_Us.html
@@ -4,6 +4,14 @@
   <title> About Us </title>
 
 <body>
+  <style>
+
+a:link {
+  font-size: 25px;
+  font-family: 'century gothic'
+}
+
+</style>
  
   <h1>
   <meta name="viewport" content="width=device-width, initial-scale=1">
