--- a/Location.html
+++ b/Location.html
@@ -10,6 +10,14 @@
   <p> <br> </p> </br>
  <!DOCTYPE html>
 <html>
+  <style>
+
+a:link {
+  font-size: 25px;
+  font-family: 'century gothic'
+}
+
+</style>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
