--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
       </style>
     </head>
 
-    <body  style = "background-color: #D4CBE5">
+    <body  style = "background-color: #699E8F">
       <h2>
      <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
