--- a/About_Us.html
+++ b/About_Us.html
@@ -4,13 +4,11 @@
   <title> About Us </title>
 
 <body>
-  <style>
+  <h2 style = "text-align:center;font-size:100px">About Us </h1>
+  <!DOCTYPE html>
 
-a:link {
-  font-size: 25px;
-  font-family: 'century gothic'
-}
-   div {
+<style>
+div {
     background-color: white;
     width: 300px;
     /*border: 10px white;*/
@@ -99,31 +97,11 @@ a:link {
         bottom: -160px;
         left: 10px;
         position: absolute;
-      } 
-    
-    
+      }
 
 </style>
 </head>
- 
-  <h1>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<body>
-<div class="w3-container">
 
-
-<div class="w3-bar w3-border w3-light-grey">
-  <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
-  <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
-  <a href="Location.html" class="w3-bar-item w3-button">Locations</a>
-  <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
-  <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
-  <a href="Events.html" class="w3-bar-item w3-button">Events</a>
- 
- </h1>
-  
-  <h2 style = "text-align:center;font-size:70px">About Us </h2>
 <span class="group">
   <img id="group" src="group.jpg" height="460px" width="880px">
 </span>
@@ -185,8 +163,5 @@ a:link {
      <br>
 <p12 style="font-size: 35px;" > Our goal for the project is to expand and become worldwide someday, so we can help children all over the world to get a better education.</p12>
 </span>
-
-
-</div>
 </body>
 </html>
