--- a/Location.html
+++ b/Location.html
@@ -7,9 +7,8 @@
 </head>
 <body>
   
-  <p> <br> </p> </br>
- <!DOCTYPE html>
-<html>
+  <h1> Fir3fly Locations </h1>
+  
   <style>
 
 a:link {
@@ -34,13 +33,9 @@ a:link {
   <a href="Events.html" class="w3-bar-item w3-button">Events</a>
  
         
-</div>
 <br>
 
-
-</body>
-</html>
-    </div>
+  </div>
 <iframe src="https://www.google.com/maps/d/embed?mid=1aUHA4u8UwR84uWIwMdz70eY-3mU" width="1500" height="400"></iframe>
 </body>
 </html>
