--- a/About_Us.html
+++ b/About_Us.html
@@ -27,7 +27,8 @@ a:link {
   <a href="Events.html" class="w3-bar-item w3-button">Events</a>
  
         
-<br>
+</div>
+    <br>
   <h1 style = "text-align:center;font-size:100px">About Us </h1>
  
 
