--- a/About_Us.html
+++ b/About_Us.html
@@ -17,7 +17,6 @@ a:link {
 <body>
 <div class="w3-container">
 
-
 <div class="w3-bar w3-border w3-light-grey">
   <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
   <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
@@ -28,6 +27,7 @@ a:link {
  
         
 </div>
+    </div>
     <br>
   <h1 style = "text-align:center;font-size:100px">About Us </h1>
  
