--- a/Ways_We_Give_Back.html
+++ b/Ways_We_Give_Back.html
@@ -4,7 +4,13 @@
   <title> Ways We Give Back </title>
 </head>
 <body>
-  <h2>
+  <style>
+    <h1>
+a:link {
+  font-size: 25px;
+  font-family: 'century gothic'
+}
+  </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
@@ -19,7 +25,7 @@
   <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
   <a href="Events.html" class="w3-bar-item w3-button">Events</a>
  
- </h2>
+ </h1>
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdwtT5ZATYy_KlgTRgvPJvLBdWkxNcuxM1X8_ibbvbifQHmWA/viewform?embedded=true" width="1500" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </body>
 </html>
