--- a/donation.html
+++ b/donation.html
@@ -4,6 +4,12 @@
 <title> Donations </title>
 </head>
 <body>
+    <style>
+a:link {
+  font-size: 25px;
+  font-family: 'century gothic'
+}
+    </style>
     <h1>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
