--- a/Events.html
+++ b/Events.html
@@ -124,6 +124,12 @@
 
 <body>
  <h2>
+ <style>
+a:link {
+  font-size: 25px;
+  font-family: 'century gothic'
+}
+ </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
@@ -142,7 +148,7 @@
   <div id="calendar"></div>
  
  
- <h3 style= "text-align: center"> The calender shows upcoming events in the Fir3fly organisation. </h2>
+ <h3 style= "text-align: center"> The calender shows upcoming events in the Fir3fly organisation. </h3>
  
  
         
