--- a/About_Us.html
+++ b/About_Us.html
@@ -2,17 +2,19 @@
 <html>
 <head>
   <title> About Us </title>
+  </head>
+  
   <h1 style = "text-align:center;font-size:100px">About Us </h1>
 
 <body>
   <style>
-    <h2>
 
 a:link {
   font-size: 25px;
   font-family: 'century gothic'
 }
-
+  </style>
+    <h1>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -27,11 +29,10 @@ a:link {
   <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
   <a href="Events.html" class="w3-bar-item w3-button">Events</a>
  
-        </h2>
-</div>
-    </div>
-    <br>
-  <h1 style = "text-align:center;font-size:100px">About Us </h1>
+        </h1>
+
+ 
+  <h2 style = "text-align:center;font-size:100px">About Us </h2>
  
 
 <style>
