--- a/home.html
+++ b/home.html
@@ -1,73 +1,191 @@
 <!DOCTYPE html>
-  <html>
+<html>
+<head>
 
-    <head>
-  
+  <title> About Us </title>
 
-      
-      <title> Fir3fly </title>
-      <link rel="stylesheet" type="text/css" href="Home.css">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <style>
-       a:link {
-    color: purple;
-    font-family: 'century gothic';
-    font-size: 25px; 
-   
-      </style>
-    </head>
+  </head>
 
-    <body  style = "background-color: #A8B5BF">
-      <h2>
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
-<div class="w3-container">
+  <style>
+a:link {
+  font-size: 25px;
+  font-family: 'century gothic'
+}
+
+<style>
+div {
+    background-color: white;
+    width: 300px;
+    /*border: 10px white;*/
+    padding: 20px;
+    margin: 20px;
+    position: relative;
+    left: 350px;
+    top: 350px;
+}
+.kemi {
+  position: absolute;
+  width: 300px;
+  left: 410px;
+  bottom: -770px;
+}
+.favour {
+  position: absolute;
+  width: 300px;
+  left:580px;
+  bottom:-1150px;
+}
+.nneoma {
+  position: absolute;
+  left:410px ;
+  width: 300px;
+  bottom:-450px;
+}
+.tobenna {
+  position: absolute;
+  width: 300px;
+  left:1000px ;
+  bottom:-735px ;
+}
+.sana {
+  position: absolute;
+  width: 300px;
+  left:1000px ;
+  bottom:-450px ;
+}
+.fav {
+  position: absolute;
+  width: 280px;
+  left: 350px;
+  bottom: -1200px;
+}
+.kem {
+  position: absolute;
+  width: 280px;
+  left: 200px;
+  bottom: -840px;
+}
+.nne {
+  position: absolute;
+  width: 280px;
+  left: 200px;
+  bottom: -470px;
+}
+.tob {
+  position: absolute;
+  width: 280px;
+  left: 800px;
+  bottom: -840px;
+}
+.san {
+  position: absolute;
+  width: 280px;
+  left: 800px;
+  bottom: -470px;
+}
+.group {
+     position: absolute;
+     width: 280px;
+     left: 250px;
+     bottom: -15px;
+   }
+ .goal {
+    text-align: center;
+        display: inline-block;
+        bottom: -160px;
+        left: 10px;
+        position: absolute;
+      }
+</style>
+</head>
+
+<!-- Menu bar  -->
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <body>
+  <div class="w3-container">
+
+  <div class="w3-bar w3-border w3-light-grey">
+    <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
+    <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
+    <a href="Location.html" class="w3-bar-item w3-button">Locations</a>
+    <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
+    <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
+    <a href="Events.html" class="w3-bar-item w3-button">Events</a>
+
+  </div>
+
+<!-- About Us Title for page -->
+  <h1 style = "text-align:center;font-size:100px">About Us </h1>
+
+<!-- Group picture -->
+
+<span class="group">
+  <img id="group" src="group.jpg" height="380px" width="880px">
+</span>
 
 
-<div class="w3-bar w3-border w3-light-grey">
-  <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
-  <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
-  <a href="Location.html" class="w3-bar-item w3-button">Locations</a>
-  <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
-  <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
-  <a href="Events.html" class="w3-bar-item w3-button">Events</a>
- 
-        
-</div>
- 
-      </h2>
+<!-- Pictures and short bios for team -->
+<span class="fav">
+  <img id="Fav" src="favour.jpg" height="260px" width="180px">
+</span>
 
-      <div class="slideshow-container">
+<span class = "favour">
+  <br>
+  <p1> <em> <b> Favour </b> </em> </p1>
+  <br>
+<p2>Hey my name is Favour Agabi. I am 15 years old and I am currently engaged in the Girl Code Program, located at First Data. I love running, helping others, going above and beyond and hanging out with friends.
+  I am very excited about this website due to the fact that it is all about helping others in need and just putting a smile on peoples faces, which is something you would do as a christian.</p2>
+</span>
+<span class="kem">
+  <img id="kem" src="kemi.jpg" height="260px" width="180px">
+</span>
 
-        <div class="mySlides fade">
-          <div class="numbertext">1 / 3</div>
-          <img src="AAXO1ZOs6m.jpg" style="width:50%">
-        </div>
+  <span class = "kemi">
+  <p3> <em> <b> Kemi </b> </em> </p3>
+  <br>
+<p4>Hey my name is Kemi Bakare. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love softball, running, hanging out with friends and traveling .
+   I’m very excited about this website because I’m helping change the world.</p4>
+</span>
+<span class="nne">
+  <img id="nne" src="nneoma.jpg" height="260px" width="180px">
+</span>
 
-        <div class="mySlides fade">
-          <div class="numbertext">2 / 3</div>
-          <img src="Indian-children-attend-a--008.jpg" style="width:50%">
-        </div>
+  <span class = "nneoma">
+  <p5> <em> <b> Nneoma </b> </em></p5>
+  <br>
+<p6>Hey my name is Nneoma Emeka. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love reading, being creative and thinking.
+   I’m very excited about this website because I am making a difference in other people’s life.</p6>
+ </span>
+ <span class="tob">
+   <img id="tob" src="tobenna.jpg" height="260px" width="180px">
+ </span>
 
-        <div class="mySlides fade">
-          <div class="numbertext">3 / 3</div>
-          <img src="KIDS IN CLASS.JPG" style="width:50%">
-        </div>
+ <span class = "tobenna">
+  <p7> <em> <b> Tobenna </b> </em></p7>
+  <br>
+<p8>Hey my name is Tobenna Obi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love sleeping, baking and eating.
+  I’m very excited about this website because it brings me joy to help people.</p8>
+</span>
+<span class="san">
+  <img id="san" src="sana.jpg" height="260px" width="180px">
+</span>
 
-      </div>
+<span class = "sana">
+  <p9> <em> <b> Sana </b> </em></p9>
+  <br>
+<p10>Hey my name is Sana Siddiqi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love writing and traveling.
+   I’m very excited about this website because it brings out my inner creativity and it's something I can look back and be proud of.</p10>
+</span>
 
-      <br>
+<!-- Goals section for page -->
 
-      <div style="text-align:center">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-      </div>
-
-      <script src= slideshow.js> </script>
-
-      <p1> <em> <b> Our mission is to provide children a pathway to success through education. By providing them with the supplies they need, we are setting a bright future for them and we will strive to give them excellent quality of life.</em></b>
-      </p1>
+<span class = "goal">
+     <p11 style="font-size: 45px; " > <em> <b> Goal </b> </em></p9>
+     <br>
+<p12 style="font-size: 35px;" > Our goal for the project is to expand and become worldwide someday, so we can help children all over the world to get a better education.</p12>
+</span>
 </body>
 </html>
