--- a/About_Us.html
+++ b/About_Us.html
@@ -1,36 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title> About Us </title>
+
   </head>
-  
-  <h1 style = "text-align:center;font-size:100px">About Us </h1>
 
 <body>
   <style>
-
 a:link {
   font-size: 25px;
   font-family: 'century gothic'
 }
-  </style>
-    <h2>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<body>
-<div class="w3-container">
-
-<div class="w3-bar w3-border w3-light-grey">
-  <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
-  <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
-  <a href="Location.html" class="w3-bar-item w3-button">Locations</a>
-  <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
-  <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
-  <a href="Events.html" class="w3-bar-item w3-button">Events</a>
- 
-        </h2>
- 
 
 <style>
 div {
@@ -43,43 +24,36 @@ div {
     left: 350px;
     top: 350px;
 }
-
 .kemi {
   position: absolute;
   width: 300px;
   left: 410px;
   bottom: -770px;
 }
-
 .favour {
   position: absolute;
   width: 300px;
   left:580px;
   bottom:-1150px;
-
 }
-
 .nneoma {
   position: absolute;
   left:410px ;
   width: 300px;
   bottom:-450px;
 }
-
 .tobenna {
   position: absolute;
   width: 300px;
   left:1000px ;
   bottom:-735px ;
 }
-
 .sana {
   position: absolute;
   width: 300px;
   left:1000px ;
   bottom:-450px ;
 }
-
 .fav {
   position: absolute;
   width: 280px;
@@ -123,14 +97,37 @@ div {
         left: 10px;
         position: absolute;
       }
-
 </style>
 </head>
+
+<!-- Menu bar  -->
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <body>
+  <div class="w3-container">
+
+  <div class="w3-bar w3-border w3-light-grey">
+    <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
+    <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
+    <a href="Location.html" class="w3-bar-item w3-button">Locations</a>
+    <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
+    <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
+    <a href="Events.html" class="w3-bar-item w3-button">Events</a>
+
+  </div>
+
+<!-- About Us Title for page -->
+  <h1 style = "text-align:center;font-size:100px">About Us </h1>
+
+<!-- Group picture -->
 
 <span class="group">
   <img id="group" src="group.jpg" height="380px" width="880px">
 </span>
 
+
+<!-- Pictures and short bios for team -->
 <span class="fav">
   <img id="Fav" src="favour.jpg" height="260px" width="180px">
 </span>
@@ -183,6 +180,8 @@ div {
    I’m very excited about this website because it brings out my inner creativity and it's something I can look back and be proud of.</p10>
 </span>
 
+<!-- Goals section for page -->
+
 <span class = "goal">
      <p11 style="font-size: 45px; " > <em> <b> Goal </b> </em></p9>
      <br>
@@ -190,3 +189,4 @@ div {
 </span>
 </body>
 </html>
+
