--- a/home.html
+++ b/home.html
@@ -2,23 +2,55 @@
   <html>
 
     <head>
+
+
+
       <title> Fir3fly </title>
       <link rel="stylesheet" type="text/css" href="Home.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <style>
 
+
+      button {
+  background-color: transparent;
+  border: none;
+  width: 100px;
+  font-size: 100px;
+  left: 250px;
+  color: black;
+  font-family: 'Comic Sans';
+  cursor: pointer;
+  }
+
+  a:link {
+    color: purple;
+    font-family: 'century gothic';
+    font-size: 25px;
+
+  }
+      </style>
     </head>
 
-    <body>
-      <h1> Fir3Fly </h1>
+    <body  style = "background-color: #D4CBE5">
+ <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
       <h2>
-        <ul1>
-          <a href="Home.html" > Home </a>
-          <a href="About_Us.html"> About Us </a>
-          <a href="Location.html"> Location </a>
-          <a href="Ways_We_Give_Back.html"> Ways We Give Back </a>
-          <a href="Donation.html"> Donation </a>
-          <a href="Events.html"> Events </a>
-        </ul1>
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
+<div class="w3-container">
+
+
+<div class="w3-bar w3-border w3-light-grey">
+  <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
+  <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
+  <a href="Location.html" class="w3-bar-item w3-button">Locations</a>
+  <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
+  <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
+  <a href="Events.html" class="w3-bar-item w3-button">Events</a>
+
+
+</div>
+
       </h2>
 
       <div class="slideshow-container">
@@ -54,4 +86,3 @@
       </p1>
 </body>
 </html>
-
