--- a/Ways_We_Give_Back.html
+++ b/Ways_We_Give_Back.html
@@ -9,8 +9,13 @@ a:link {
   font-size: 25px;
   font-family: 'century gothic'
 }
+    .secondText {
+  font-size: 20px;
+}
+
   </style>
-  <h1>
+    <h1 style = "text-align: left; text-size: 90px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
+  <h2>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <div class="w3-container">
@@ -23,7 +28,7 @@ a:link {
   <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
   <a href="Events.html" class="w3-bar-item w3-button">Events</a>
  
- </h1>
+ </h2>
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdwtT5ZATYy_KlgTRgvPJvLBdWkxNcuxM1X8_ibbvbifQHmWA/viewform?embedded=true" width="1400" height="2200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
   </body>
