--- a/Events.html
+++ b/Events.html
@@ -123,18 +123,22 @@
  
 
 <body>
+ <h1 style = "text-align: left; text-size: 90px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
  <h2>
  <style>
 a:link {
   font-size: 25px;
   font-family: 'century gothic'
 }
+   .secondText {
+  font-size: 20px;
+}
+
  </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 <div class="w3-container">
-
 
 <div class="w3-bar w3-border w3-light-grey">
   <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
