--- a/Location.html
+++ b/Location.html
@@ -14,8 +14,13 @@ a:link {
   font-size: 25px;
   font-family: 'century gothic'
 }
+     .secondText {
+  font-size: 20px;
+}
 
 </style>
+  
+ <h1 style = "text-align: left; text-size: 90px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
