--- a/home.html
+++ b/home.html
@@ -56,17 +56,30 @@
       <div class="slideshow-container">
 
         <div class="mySlides fade">
-          <div class="numbertext">1 / 3</div>
+          <div class="numbertext">1 / 6</div>
           <img src="AAXO1ZOs6m.jpg" style="width:50%">
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">2 / 3</div>
+          <div class="numbertext">2 / 6</div>
           <img src="Indian-children-attend-a--008.jpg" style="width:50%">
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">3 / 3</div>
+          <div class="numbertext">3 / 6</div>
+          <img src="KIDS IN CLASS.JPG" style="width:50%">
+        </div>
+        
+        <div class="mySlides fade">
+          <div class="numbertext">4 / 6</div>
+          <img src="KIDS IN CLASS.JPG" style="width:50%">
+        </div>
+         <div class="mySlides fade">
+          <div class="numbertext">5 / 6</div>
+          <img src="KIDS IN CLASS.JPG" style="width:50%">
+        </div>
+          <div class="mySlides fade">
+          <div class="numbertext">6 / 6</div>
           <img src="KIDS IN CLASS.JPG" style="width:50%">
         </div>
 
