--- a/home.html
+++ b/home.html
@@ -28,11 +28,14 @@
     font-size: 25px;
 
   }
+        .secondText {
+  font-size: 20px;
+}
       </style>
     </head>
 
     <body  style = "background-color: #D4CBE5">
- <button class = "button" onClick = "window.location.href='home.html';"> Fir3Fly </button>
+  <h1 style = "text-align: left; text-size: 90px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
       <h2>
      <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
