--- a/home.html
+++ b/home.html
@@ -75,15 +75,15 @@
         
         <div class="mySlides fade">
           <div class="numbertext">4 / 6</div>
-          <img src="KIDS IN CLASS.JPG" style="width:50%">
+          <img src="images.JPG" style="width:50%">
         </div>
          <div class="mySlides fade">
           <div class="numbertext">5 / 6</div>
-          <img src="KIDS IN CLASS.JPG" style="width:50%">
+          <img src="images1.JPG" style="width:50%">
         </div>
           <div class="mySlides fade">
           <div class="numbertext">6 / 6</div>
-          <img src="KIDS IN CLASS.JPG" style="width:50%">
+          <img src="images3.JPG" style="width:50%">
         </div>
 
       </div>
