--- a/home.html
+++ b/home.html
@@ -94,6 +94,9 @@
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
       </div>
 
       <script src= slideshow.js> </script>
