--- a/About_Us.html
+++ b/About_Us.html
@@ -14,6 +14,10 @@ a:link {
 }
 
 <style>
+  .secondText {
+  font-size: 20px;
+}
+    
 div {
     background-color: white;
     width: 300px;
@@ -118,7 +122,7 @@ div {
   </div>
 
 <!-- About Us Title for page -->
-  <h1 style = "text-align:center;font-size:100px">About Us </h1>
+ <h1 style = "text-align: left; text-size: 90px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
 
 <!-- Group picture -->
 
