--- a/home.html
+++ b/home.html
@@ -101,7 +101,7 @@
 
       <script src= slideshow.js> </script>
 
-      <p1> <em> <b> Our mission is to provide children a pathway to success through education. By providing them with the supplies they need, we are setting a bright future for them and we will strive to give them excellent quality of life.</em></b>
+      <p1 style="text-align: center;" > <em> <b> Our mission is to provide children a pathway to success through education. By providing them with the supplies they need, we are setting a bright future for them and we will strive to give them excellent quality of life.</em></b>
       </p1>
 </body>
 </html>
