--- a/About_Us.html
+++ b/About_Us.html
@@ -8,15 +8,12 @@
 
 <body>
   <style>
-    
- .secondText {
-  font-size: 20px;
-}
 a:link {
   font-size: 25px;
   font-family: 'century gothic'
 }
-    
+
+<style>
 div {
     background-color: white;
     width: 300px;
@@ -104,7 +101,6 @@ div {
 </head>
 
 <!-- Menu bar  -->
-   <h1 style = "text-align: left; text-size: 90px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -122,6 +118,7 @@ div {
   </div>
 
 <!-- About Us Title for page -->
+  <h1 style = "text-align:center;font-size:100px">About Us </h1>
 
 <!-- Group picture -->
 
@@ -192,4 +189,3 @@ div {
 </span>
 </body>
 </html>
-
